# zyn

./: Cargo.toml  IDOLS.md  README.md
crates/zyn/: Cargo.toml
crates/zyn-core/: Cargo.toml
crates/zyn-core/src/: dependency.rs  graph.rs  lib.rs  lockfile.rs  name.rs  package.rs  patch.rs  source.rs  version.rs
crates/zyn-manifest/: Cargo.toml
crates/zyn-manifest/src/: error.rs  lib.rs  manifest.rs  package_json.rs  spec.rs
